--- a/src/window.ui
+++ b/src/window.ui
@@ -24,14 +24,13 @@
       </object>
     </child>
     <child>
-      <object class="GtkLabel" id="label">
+      <object class="GtkBox" id="box">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label">Hello, World!</property>
-        <attributes>
-          <attribute name="weight" value="bold"/>
-          <attribute name="scale" value="2"/>
-        </attributes>
+        <property name="orientation">vertical</property>
+        <child>
+          <placeholder/>
+        </child>
       </object>
     </child>
   </template>
