Make ui template compile

--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -24,13 +24,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkBox" id="box">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <child>
-          <placeholder/>
-        </child>
+      <object class="TodoForm" id="form">
       </object>
     </child>
   </template>
