--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -12,19 +12,26 @@
         <property name="can_focus">False</property>
         <property name="title" translatable="yes">Todos</property>
         <property name="show_close_button">True</property>
-        <child>
-          <object class="GtkButton" id="add_button">
-            <property name="label" translatable="yes">Add</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="always_show_image">True</property>
-          </object>
-        </child>
       </object>
     </child>
     <child>
-      <object class="TodoForm" id="form">
+      <object class="GtkBox">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <object class="TodoForm" id="form">
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="pack_type">end</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
       </object>
     </child>
   </template>
