--- a/src/ui/form.ui
+++ b/src/ui/form.ui
@@ -28,9 +28,11 @@
         <property name="label" translatable="yes">Add</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="has_focus">True</property>
         <property name="receives_default">True</property>
         <property name="halign">end</property>
         <property name="margin_left">3</property>
+        <signal name="clicked" handler="submit_clicked" swapped="no"/>
       </object>
       <packing>
         <property name="expand">False</property>
