--- a/src/ui/list.ui
+++ b/src/ui/list.ui
@@ -7,8 +7,17 @@
     <property name="can_focus">False</property>
     <property name="hexpand">True</property>
     <property name="vexpand">True</property>
+    <property name="selection_mode">none</property>
     <child>
       <object class="TodoListItem" id="list_item">
+      </object>
+    </child>
+    <child>
+      <object class="TodoListItem" id="list_item2">
+      </object>
+    </child>
+    <child>
+      <object class="TodoListItem" id="list_item3">
       </object>
     </child>
   </template>
