--- a/data/ui/list-item.ui
+++ b/data/ui/list-item.ui
@@ -12,7 +12,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkCheckButton">
+          <object class="GtkCheckButton" id="check_button">
             <property name="label" translatable="yes">checkbutton</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
